fix border of select2 buttons in dark mode

--- a/css/includes/components/_select2.scss
+++ b/css/includes/components/_select2.scss
@@ -296,6 +296,12 @@
 
    & ~ .btn.btn-outline-secondary {
       border: $input-border-width solid $input-border-color;
+
+      @include dark-mode {
+         & {
+            border-color: $input-border;
+         }
+      }
    }
 }
 
